--- a/scss/components/_footer.scss
+++ b/scss/components/_footer.scss
@@ -7,7 +7,7 @@ footer {
         margin: 1em .5em 0 .1em;
         width: 15px;
         opacity: .1;
-        font-family: $sideBarFont;
+        font-family: $discographyfont;
         z-index: -1;
     
         p{
