--- a/scss/components/_colorMode.scss
+++ b/scss/components/_colorMode.scss
@@ -1,10 +1,17 @@
 body{
     background-color: white;
+    // background: linear-gradient(125deg, #f7cac9 ,  #92a8d1 );
     color: black;
 }
 
+body.fandomColor{
+    // background: black;
+    background: linear-gradient(125deg, #f7cac9 ,  #92a8d1 );
+    color: white;
+}
 body.dark{
     background: black;
+    // background: linear-gradient(125deg, #f7cac9 ,  #92a8d1 );
     color: white;
 }
 
@@ -14,6 +21,7 @@ body.dark{
     height: 25px;
     border: 1px solid black;
     background-image: linear-gradient(90deg, #ffffff 50%, #000000 50%);
+    // conic-gradient(from 45deg, #ffffff 33.3%, #000 33.3%, #f7cac9 60%);
     border-radius: 20px;
     z-index: 1;
     top: 50%;
