--- a/scss/components/_cursor.scss
+++ b/scss/components/_cursor.scss
@@ -1,42 +1,30 @@
 #cursor{
     position: absolute;
     // cursor: none;
-    width: 50px;
-    height: 50px;
-    border: 1px solid black;
+    width: 60px;
+    height: 60px;
+    border: 1px solid transparent;
     border-radius: 50%;
     transition-duration: 200ms;
     transition-timing-function: ease-out;
     // animation: cursorAnimation .5s infinite alternate;
     pointer-events: none;
+    backdrop-filter: invert(80%)
 }
 
 #cursor.dark{
     position: absolute;
     // cursor: none;
-    width: 50px;
-    height: 50px;
-    border: 1px solid white;
+    width: 60px;
+    height: 60px;
+    border: 1px solid transparent;
     border-radius: 50%;
     transition-duration: 200ms;
     transition-timing-function: ease-out;
     // animation: cursorAnimation .5s infinite alternate;
 }
 
-#cursor::after{
-    content: "";
-    position: absolute;
-    width: 3px;
-    height: 3px;
-    border: 1px solid gray;
-    border-radius: 20px;
-    top: 10px;
-    left: 5px;
-    opacity: .5;
-    transition-duration: 200ms;
-    transition-timing-function: ease-out;
-    // animation: cursorAnimation .5s infinite alternate;
-}
+
 
 .expand{
     border: 1px solid white;
