--- a/scss/components/pages/_mainDiscography.scss
+++ b/scss/components/pages/_mainDiscography.scss
@@ -1,16 +1,265 @@
+.listen-link{
+    position: absolute;
+    text-decoration: none;
+    font-size: 2em;
+    top: 5em;
+    right: 0;
+    opacity: .5;
+    border: 1px solid silver;
+    border-radius: 50%;
+    padding: 1.5em 1em;
+    transition: 1s ease-in-out;
+
+    &:hover{
+        opacity: 1;
+        backdrop-filter: invert(50%);
+        transition: 1s ease-in-out;
+        color: white;
+
+        &::before{
+            position: absolute;
+            content: "";
+            border: 1px solid silver;
+            border-radius: 50%;
+            padding: 2.2em;
+            top: 0;
+            left: 0;
+            transition: 1s ease-in-out;
+        }
+        &::after{
+            position: absolute;
+            content: "";
+            border: 1px solid silver;
+            border-radius: 50%;
+            padding: 2.2em;
+            top: -0.1em;
+            left: 0.1em;
+            transition: 1s ease-in-out;
+        }
+    }
+}
+.watch-link{
+    position: absolute;
+    text-decoration: none;
+    font-size: 1.2em;
+    top: 17em;
+    right: 2em;
+    opacity: .5;
+    border: 1px solid silver;
+    border-radius: 50%;
+    padding: 2.4em 1em;
+    transition: 1s ease-in-out;
+
+    &:hover{
+        opacity: 1;
+        backdrop-filter: invert(50%);
+        transition: 1s ease-in-out;
+        color: white;
+
+        &::before{
+            position: absolute;
+            content: "";
+            border: 1px solid silver;
+            border-radius: 50%;
+            padding: 3.1em;
+            top: 0;
+            left: 0;
+            transition: 1s ease-in-out;
+        }
+        &::after{
+            position: absolute;
+            content: "";
+            border: 1px solid silver;
+            border-radius: 50%;
+            padding: 3.2em;
+            top: -0.1em;
+            left: 0.1em;
+            transition: 1s ease-in-out;
+        }
+    }
+}
+.previous{
+    position: absolute;
+    left: 0;
+    top: 2em;
+    border: 1px solid silver;
+    backdrop-filter: invert(5%);
+    transition: .2s ease-in;
+    padding: 15px;
+
+    &:hover{
+        cursor: pointer;
+        border: 1px solid silver;
+        border-radius: 50%;
+        backdrop-filter: invert(25%);
+        transition: .2s ease-in;
+        color: white;
+    }
+}
+
+.next{
+    position: absolute;
+    left: 0;
+    bottom: 1em;
+    border: 1px solid silver;
+    backdrop-filter: invert(5%);
+    transition: .2s ease-in;
+    border-radius: 0;
+    padding: 15px;
+
+    &:hover{
+        cursor: pointer;
+        border: 1px solid silver;
+        border-radius: 50%;
+        backdrop-filter: invert(25%);
+        transition: .2s ease-in;
+        color: white;
+    }
+}
+
 .mainDiscography{
+    font-family: $discographyfont;
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    width: 80%;
-    height: 80%;
-    padding: 2em;
+    width: 90%;
+    height: 100%;
+    padding: 1.5em;
+    overflow: hidden;
+    
+    &__discography{
+        position: absolute;
+        right: 0;
+        width: 95%;
+        height: 100%;
+        vertical-align: middle;
+        overflow: hidden;
+        
+        &__dets{
 
-    &__paragraph{
+            &__album_category{
+                z-index: -1;
+                position: absolute;
+                font-size: 2em;
+                opacity: .3;
+                top: 0;
+                left: 0;
+            }
 
-        &__seventeen{
-            font-size: 5em;
+            &__album_name{
+                width: 90%;
+                font-size: 6em;
+                margin-left: 2px;
+            }
+
+            &__title_track{
+                position: fixed;
+                bottom: 1em;
+                left: 1em;
+                font-size: 6em;
+                transition: 1s ease-in-out;
+                text-decoration: none;
+
+                &::after{
+                    content: "title";
+                    position: absolute;
+                    font-size: 0.3em;
+                    opacity: .3;
+                    bottom: 0.5em;
+                    margin-left: -0.2em;
+                }
+            }
+    
+            &__details{
+                display: grid;
+                grid-template-columns: 50% 60%;
+                gap: 2%;
+
+                &__imageDiv{
+                    width: 20%;
+                    z-index: -1;
+                    margin: 2.5em 0 0 5em;
+                    right: inherit;
+        
+                    &__image{
+                        width: 400px;
+                        object-fit: cover;
+                    }
+                }
+    
+                &__paragraph{
+                    margin-top: 20em;
+                    background: url("../../../images/discography/17CARAT.jpg") fixed no-repeat;
+                    background-size: contain;
+                    filter: blur(20px) brightness(30%);
+                    
+
+                    &__album_detail{
+                        margin-top: 0.5em;
+                        font-size: 3em; 
+                        margin-bottom: .5em;
+                    }
+
+                    &__artist_name{
+                        font-size: 2em; 
+                        margin-bottom: 1.5em;
+
+                        &::before{
+                            content: "Artist";
+                            position: absolute;
+                            font-size: 0.9em;
+                            opacity: .3;
+                            margin-top: -0.7em;
+                            margin-left: -1.7em;
+                        }
+                    }
+                    &__release_date{
+                        font-size: 2em;
+                        margin-bottom: 1.5em;
+
+                        &::before{
+                            content: "Released";
+                            position: absolute;
+                            font-size: 0.9em;
+                            opacity: .3;
+                            margin-top: -0.7em;
+                            margin-left: -1.7em;
+                        }
+                    }
+                    
+                    &__track_list{
+                        width: 30%;
+                        font-size: 2em;
+
+                        &__ol{
+                            &__li{
+                                font-size: auto;
+
+                                &:nth-child(1){
+                                    &::before{
+                                        content: "Tracks";
+                                        position: absolute;
+                                        font-size: 1.8em;
+                                        opacity: .3;
+                                        margin-top: -0.7em;
+                                        margin-left: -1.9em;
+                                    } 
+                                }
+                            }
+                        }
+                    } 
+                }
+            }
+
+            &__id{
+                position: fixed;
+                z-index: -1;
+                bottom: 0.5em;
+                right: 0;
+                opacity: .1;
+                font-size: 5em;
+            }
         }
     }
 }
