--- a/scss/components/pages/_mainProfile.scss
+++ b/scss/components/pages/_mainProfile.scss
@@ -9,11 +9,15 @@
     overflow-x: hidden;
 
     &__seventeen__name{
-        position: absolute;
-        font-size: 8em;
+        // position: fixed;
+        // font-size: 8em;
+        font-size: 10em;
         font-family: $discographyfont;
         filter: invert(50%);
-        margin-top: 0.5em;
+        // margin-top: -1em;
+        opacity: 0.5;
+        
+        margin-left: 0;
     }
 
     &__paragraph{
@@ -21,15 +25,26 @@
         // top: 2em;
         height: 40%;
         // width: 40%;
-        margin: 2em 0 10em 0;
+        // margin: 2em 0 10em 0;
+        margin: 5em 0 10em 0;
         display: inline-block;
 
         
         &__name{
+            // background: url("../../../images/members/woozi_attacca_op1.jpg") no-repeat fixed;
+            // background-size: cover;
+            // background-blend-mode: saturation;
+            // width: 30em;
+            // height: 20em;
+            // filter: grayscale(100%);
+            // transition: .5s ease-in-out;
+            // text-align: right;
+            // padding: 2em;
             background: url("../../../images/members/woozi_attacca_op1.jpg") no-repeat fixed;
-            background-size: cover;
+            background-size: contain;
             background-blend-mode: saturation;
-            width: 30em;
+            // width: 30em;
+            // width: 100%;
             height: 20em;
             filter: grayscale(100%);
             transition: .5s ease-in-out;
@@ -38,10 +53,12 @@
             
 
             &::before{
-                content: "Name";
-                position: absolute;
-                font-size: 5em;
-                opacity: .5;
+                // content: "Name";
+                // position: absolute;
+                // font-size: 5em;
+                // opacity: .5;
+                // left: 50%;
+                display: none;
             }
 
             &:hover{
@@ -57,7 +74,7 @@
             background-size: cover;
             background-blend-mode: saturation;
             // top: 20em;
-            margin-top: 30em;
+            margin-top: 5em;
             margin-left: 80%;
             width: 20em;
             height: 20em;
@@ -110,7 +127,7 @@
                 width: 40em;
                 transition: .5s ease-in-out;
                 // height: 20em;
-                height: 35em;
+                height: 40em;
                 object-fit: cover;
                 object-position: center 10%;
     
@@ -123,6 +140,9 @@
                 z-index: 1;
                 font-size: 3em;
                 transition: .2s ease-in-out;
+                // position: absolute;
+                // top: 50%;
+                // width: 50%;
                 
                 span{
                 
