--- a/scss/components/_footer.scss
+++ b/scss/components/_footer.scss
@@ -1,16 +1,17 @@
-footer {
+.footer {
     right: 0;
     bottom: 0;
-    width: 25px;
+    // width: 25px;
+    // width: 100%;
 
-    .pledis{
+    &__pledis{
         margin: 1em .5em 0 .1em;
         width: 15px;
         opacity: .1;
         font-family: $discographyfont;
         z-index: -1;
     
-        p{
+        &__paragraph{
             writing-mode: vertical-lr;
             text-orientation: mixed;
             text-transform: uppercase;
@@ -22,7 +23,7 @@ footer {
         }
     }
 
-    .bar{
+    &__bar{
         content: '';
         border: 1px solid dimgray;
         height: 195px;
@@ -32,11 +33,11 @@ footer {
         opacity: .1;
     }
 
-    .icons{
+    &__icons{
         text-align: center;
 
-        a{
-            display: inline-block;
+        &__links{
+            display: block;
             padding-bottom: 1.3em;
             transition: .2s ease-in;
 
