--- a/scss/components/_responsive.scss
+++ b/scss/components/_responsive.scss
@@ -16,12 +16,42 @@
     // BACKGROUND TEXT
     .backgroundText{
         font-size: 3em;
+        left: 0;  
     }
+
     // NAVBAR
+    header{
+        width: 100%;
+        height: 70px;
+        display: inline;
+        // backdrop-filter: invert(20%);
+    }
+    .menu_btn{
+        top: 1.5rem;
+        left: 93%;
+        // backdrop-filter: grayscale(100%);
+        // width: 530px;
+    }
+
+    #colorMode {
+        // position: absolute;
+        // width: 25px;
+        // height: 25px;
+        // border: 1px solid black;
+        // background-image: linear-gradient(90deg, #ffffff 50%, #000000 50%);
+        // // conic-gradient(from 45deg, #ffffff 33.3%, #000 33.3%, #f7cac9 60%);
+        // border-radius: 20px;
+        // z-index: 1;
+        // display: none;
+        top: 10em;
+        // top: 1.7em;
+        left: 0.5;
+        // width: 32px;
+    }
     .nav{
         .navbar{
             &__item{
-                padding: 5em 0 0 0;
+                padding: 7em 0 0 0;
                 li{
                     font-size: 3em;
                 }
@@ -29,8 +59,20 @@
         }
     }
 
-    #colorMode, .menu_btn {
-        display: inline-block;
+    // #colorMode, .menu_btn {
+    //     display: inline;
+    // }
+
+    #group{
+        position: absolute;
+        left: 0.5em;
+        top: 1.5em;
+        
+        // .glitch{
+        //     writing-mode: horizontal-tb;
+        //     text-orientation: sideways;
+        // }
+        
     }
 
     // FOOTER
@@ -39,7 +81,7 @@
         height: 50px;
         // margin-bottom: 1em;
         // background-color: transparent;
-        backdrop-filter: invert(20%);
+        backdrop-filter: invert(20%) blur(20px);
 
         &__pledis{
             display: none;
@@ -63,7 +105,7 @@
 
     // HOME 
     .mainHome{
-        
+        height: 90%;
         width: 70vw;
     
         &__paragraph{
@@ -89,7 +131,7 @@
             }
             &__subtitle{
                 // position: fixed;
-                top:6em;
+                top: 4em;
                 right: 0;
                 font-size: 0.6em;
                 padding: 3em 1em;
@@ -133,7 +175,7 @@
                     &__image1{
                         width: 100%;
                         height: 250px;
-                        object-fit: contain;
+                        object-fit: cover;
                         object-position: center;
                         backdrop-filter: invert(90%);
                     }
@@ -166,7 +208,7 @@
     
                 &__image4{
                     position: absolute;
-                    bottom: -20em;
+                    bottom: -17em;
                     width: 60%;
                     height: 50%;
                     z-index: -1;
@@ -190,18 +232,26 @@
     }
     // MEMBERS
     .mainMembers{
-        padding-top: 1em;
+        padding-top: 5em;
+        padding-bottom: 0;
         width: 80%;
-        // height: 90%;
+        height: 90%;
         
     
         &__dets{
             margin-bottom: 5em;
-            height: 85vh;
+            height: 70vh;
+
+            &:nth-child(13){
+                margin-bottom: 0;
+                padding-bottom: 0;
+            }
 
             &__number{
                 right: 0;
-                margin-top: -49.9%;
+                // margin-top: -2.5em;
+                margin-top: -48%;
+                // margin-top: 60%;
                 opacity: 0.5;
                 position: absolute;
                 // margin-top: 0;
@@ -211,11 +261,15 @@
                 // height: 80vh;
                 left: 0;
                 width: 90%;
+                // height: 600px;
+                // margin: 0 2em 0 2em;
                 // position: absolute;
                 // display: inline-block;
                 // overflow: hidden;
                 // height: 600px;
                 // right: 30%;
+
+               
 
                 &:hover img{
                     transform: scale(1.1);
@@ -223,7 +277,11 @@
                 
                 &__image{
                     width: 100%;
-                    height: 100%;
+                    height: 80%;
+
+                    &:nth-child(13){
+                        height: 400px;
+                     }
                     // object-position: center;
                 } 
             }
@@ -232,7 +290,7 @@
                 // position: absolute;
                 width: 90%;
                 left: 0;
-                top: 60%;
+                top: 55%;
                 text-align: left;
                 background-image: linear-gradient(90deg, #000 8%, #fff 8%);  
 
@@ -252,6 +310,9 @@
 
     // PROFILE
     .mainProfile{
+        width: 80%;
+        padding: 7em 0;
+        // width: 75%;
 
         &__paragraph{
             margin: 2em 0 0 0;
@@ -260,7 +321,7 @@
                 margin-top: 2em;
                 width: 100%;
                 background-size: contain;
-                // height: 20em;
+                // height: 20em;cover
                 filter: grayscale(0%);
                 text-align: left;
                 
@@ -301,12 +362,13 @@
 
                 &__image{
                     width: 100%;
+                    height: 30em;
                     filter: grayscale(0%);
                 }
     
                 &__names{
                     text-align: center;
-                    font-size: 1.6em;
+                    font-size: 1.3em;
                     width: 100%;
                     // background-color: #000;
                     // background-image: none;  
@@ -315,6 +377,7 @@
             }
 
             &__list{
+                position: relative;
                 margin-top: 15em;
                 &::before{
                     font-size: 3.5em;
@@ -333,6 +396,10 @@
                         height: 20em;
                         text-align: left;
                         
+                        &__names{
+                            font-size: 1em;
+                            margin-left: -20px;
+                        }
             
                         &::before{
                             font-size: 2em;
@@ -344,6 +411,11 @@
                         background-size: cover;
                         height: 20em;
                         text-align: left;
+
+                        &__names{
+                            font-size: 1em;
+                            margin-left: -20px;
+                        }
             
                         &::before{
                             font-size: 2em;
@@ -356,6 +428,11 @@
                         background-size: cover;
                         height: 20em;
                         text-align: left;
+
+                        &__names{
+                            font-size: 1em;
+                            margin-left: -20px;
+                        }
                         
                         &::before{
                             font-size: 2em;
@@ -374,11 +451,11 @@
                 filter: grayscale(0%);
                 padding: 2em;
                 margin-top: 8em;
-                margin-left: 5%;
+                margin-left: 2em;
                 
                 &::before{
-                    top: 0;
-                    left: 0;
+                    top: -0.5em;
+                    left: -0.5em;
                     font-size: 3.5em;
                 }
             }
@@ -388,16 +465,16 @@
                 background-size: contain;
                 width: 100%;
                 height: 100%;
-                margin-left: 0;
+                margin-left: 2em;
                 filter: grayscale(0%);
                 text-align: left;
                 margin-bottom: 0;
-                margin-left: 5%;
+                // margin-left: 0;
     
                 &::before{
                     text-align: right;
                     bottom: 0;
-                    right: 0;
+                    right: 1em;
                     font-size: 3.5em;
                 }
             }
@@ -407,12 +484,17 @@
     // DISCOGRAPHY
     .listen-link{
         position: absolute;
-        text-decoration: underline;
+        // text-decoration: underline;
         font-size: 1em;
-        top: 41%;
-        right: 30%;
-        border: none;
-        padding: 0;
+        top: 19.5%;
+        // top: 9.5em;
+        right: 0;
+        border: 1px solid silver;
+        border-radius: 2px;
+        padding: 1em;
+        writing-mode: vertical-lr;
+        text-orientation: sideways;
+        // text-transform: uppercase;
 
         &:hover{
             backdrop-filter: invert(0%);
@@ -428,12 +510,15 @@
     }
     .watch-link{
         position: absolute;
-        text-decoration: underline;
         font-size: 1em;
-        top: 41%;
-        right: 50%;
-        border: none;
-        padding: 0;
+        top: 33%;
+        // top: 16em;
+        right: 0;
+        border: 1px solid silver;
+        border-radius: 2px;
+        padding: 1em;
+        writing-mode: vertical-lr;
+        text-orientation: sideways;
 
         &:hover{
             backdrop-filter: invert(0%);
@@ -448,28 +533,32 @@
         }
     }
     .previous{
-        // position: absolute;
-        top: -0.05px;
+        position: fixed;
+        z-index: 100;
+        top: 0.5em;
         // top: 0;
         left: 50%;
         padding: 8px;
     }
     .next{
-        bottom: -0.05px;
+        bottom: 0;
         left: 50%;
         padding: 8px;
     }
 
     .mainDiscography{
         justify-content: center;
-        width: 85%;
+        width: 70%;
+        height: 85%;
         overflow: hidden;
-        margin-bottom: 2em;
+        margin-top: 0;
+        margin-right: 5%;
         
 
         &__discography{
             position: absolute;
-            width: 90%;
+            top: 2.5em;
+            width: 100%;
             height: 100%;
             vertical-align: middle;
             overflow-y: scroll;
@@ -496,7 +585,7 @@
                 &__title_track{
                     font-size: 2em;
                     position: absolute;
-                    top: 2em;
+                    top: 1.5em;
                     left: 0;
                     writing-mode: vertical-lr;
                     text-orientation: upright;
@@ -592,7 +681,7 @@
                     }
                 }
                 &__id{
-                    top: 3em;
+                    top: 2.7em;
                     right: 0;
                     opacity: .1;
                     font-size: 2em;
